examples/test/testpolicy8873.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8873
  namespace: namespace156
spec:
  podSelector:
    matchLabels:
      key37: value22
      key9: value9
      key12: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value8
          key29: value13
          key38: value20
      podSelector:
        matchLabels:
          key36: value41
